fixing photo
